--- a/Design_2.css
+++ b/Design_2.css
@@ -4,10 +4,20 @@
 	margin:0 ;
 	padding: 0;
     box-sizing: border-box;
+	/* scroll-behavior: smooth; */
+}
+html
+{
+	scroll-behavior: smooth;
 }
 :root
 {
 	--mainColor:#7cb62f;
+}
+::selection
+{
+	/* background-color: #fff;
+	color: #000; */
 }
 ul li 
 {
@@ -30,7 +40,7 @@ a
 	left: 0;
 	right: 0;
 	bottom: 0;
-	background-color: rgba(0, 0, 0, 0.6);
+	background-color: rgba(0, 0, 0, 0.5);
 }
 .compnent
 {
@@ -46,6 +56,9 @@ a
 	font-size: 20px;
 	max-width: 50%;
 	color: #888 ;
+	margin: 10px auto;
+	/* background-color: #007bb5; */
+	text-align: center !important;
 	/* background-color: red; */
 }
 .compnent .div
@@ -54,7 +67,7 @@ a
 	margin: auto;
 	height: 4px;
 	background-color: #9c99a3dd;
-	text-align: center;
+	text-align: center ;
 	/* position:absolute; */
 	position: relative;
 }
@@ -66,8 +79,7 @@ a
 	position: absolute;
 	right: 25%;
 	top: -1px;
-	/* margin: auto;
-	text-align: center; */
+
 }
 @media (max-width:768px)
 {
@@ -85,13 +97,12 @@ body
 header
 {
 	width: 100%;
-	height: auto;
+	height: 70px;
 	padding: 20px 0;
 	background-color: #eae0e0bc;
 	position: fixed;
-	width: 100%;
 	z-index: 2222;
-	color: #000;
+	color: #000; 
 }
 header .bar
 {
@@ -102,16 +113,27 @@ header .bar
 	cursor: pointer;
 	z-index: 233;
 }
-header .logo h1
+header .logo h2
 {
   font-size: 34px;
+  cursor: pointer;
 }
-header .nav .nav-list 
+/* header .nav .nav-list 
 {
  	display: flex;
     justify-content: space-between;
 	align-items: center;
 	gap: 30px;
+} */
+
+header .nav .nav-list 
+{
+ 	/* display: block; */
+   clip-path: (0 0,100% 0,100% 0,0 0);
+}
+header .nav .nav-list.active
+{
+	clip-path: (0 0,100% 0,100% 100%,0 100%);
 }
 header .nav a
 {
@@ -127,7 +149,17 @@ header .nav a:hover
 {
 	color: var(--mainColor);
 }
-@media (max-width:775px)
+@media (min-width:994px)
+{
+	header .nav .nav-list
+	{
+			display: flex;
+		    justify-content: space-between;
+			align-items: center;
+			gap: 20px;
+	}
+}
+@media (max-width:993px)
 {
 	header .nav .nav-list
 	{
@@ -165,11 +197,11 @@ header .nav a:hover
 	width: 100%;
 	left: 50%;
 	top: 50%;
-	transform: translate(-50%,-60%);
-	-webkit-transform: translate(-50%,-60%);
-	-moz-transform: translate(-50%,-60%);
-	-ms-transform: translate(-50%,-60%);
-	-o-transform: translate(-50%,-60%);
+	transform: translate(-50%,-30%);
+	-webkit-transform: translate(-50%,-30%);
+	-moz-transform: translate(-50%,-30%);
+	-ms-transform: translate(-50%,-30%);
+	-o-transform: translate(-50%,-30%);
 }
 .home .home-title
 {
@@ -374,6 +406,7 @@ header .nav a:hover
 {
 	background-color: var(--mainColor);
 	/* color: #FFF; */
+	cursor: pointer;
 }
 .main-services .main-div:hover .icon
 {
@@ -409,6 +442,7 @@ header .nav a:hover
 
 	margin-top: 60px;
 	text-align: center;
+	cursor: pointer;
 }
 .statistics .icons .main-icon
 {
@@ -423,11 +457,19 @@ header .nav a:hover
 	-moz-border-radius: 50%;
 	-ms-border-radius: 50%;
 	-o-border-radius: 50%;
-	transition: all .6s ease-in-out;
-	-webkit-transition: all .6s ease-in-out;
-	-moz-transition: all .6s ease-in-out;
-	-ms-transition: all .6s ease-in-out;
-	-o-transition: all .6s ease-in-out;
+	transition: all .3s ease-in-out;
+	-webkit-transition: all .3s ease-in-out;
+	-moz-transition: all .3s ease-in-out;
+	-ms-transition: all .3s ease-in-out;
+	-o-transition: all .3s ease-in-out;
+}
+.statistics .icons .main-icon:hover
+{
+	background-color: transparent;
+}
+.statistics .icons:hover i
+{
+	color: var(--mainColor) !important;
 }
 .statistics .icons  span
 {
@@ -465,11 +507,11 @@ header .nav a:hover
 {
 	margin-left: 10px;
 	margin-bottom: 15px;
-	transition: all .2s ease-in-out;
-	-webkit-transition: all .2s ease-in-out;
-	-moz-transition: all .2s ease-in-out;
-	-ms-transition: all .2s ease-in-out;
-	-o-transition: all .2s ease-in-out;
+	transition: all .3s ease-in-out;
+	-webkit-transition: all .3s ease-in-out;
+	-moz-transition: all .3s ease-in-out;
+	-ms-transition: all .3s ease-in-out;
+	-o-transition: all .3s ease-in-out;
 }
 .Protofile .buttons .active
 {
@@ -481,32 +523,76 @@ header .nav a:hover
 	background-color: var(--mainColor);
 	border: none;
 }
+
 .Protofile .picture
 {
-	padding-top: 15px;
-	margin-bottom: 5px;
+	  position: relative;
+      width: 280px;
+      height: 200px;
+      overflow: hidden;
+	  margin:  5px auto;
+}
+.Protofile .picture .ssr
+{
+      position: absolute;
+      top: -100%;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.7);
+      color: #fff;
+      display: flex;
+	  gap: 15px;
+      align-items: center;
+      justify-content: center;
+      cursor: pointer;
+      transition: top 0.5s ease;
+      -webkit-transition: top 0.5s ease;
+      -moz-transition: top 0.5s ease;
+      -ms-transition: top 0.5s ease;
+      -o-transition: top 0.5s ease;
+}
+.Protofile .picture .ssr svg
+{
+	color:#fff;
+	width: 20px;
+	height: 20px;
+}
+.Protofile .picture .ssr svg:hover
+{
+	color: #757474;
+}
+.Protofile .picture:hover .ssr
+{
+top: 0;
 }
 .Protofile .picture img
 {
 	width: 100%;
-	transition: all .6s ease-in-out;
-	-webkit-transition: all .6s ease-in-out;
-	-moz-transition: all .6s ease-in-out;
-	-ms-transition: all .6s ease-in-out;
-	-o-transition: all .6s ease-in-out;
+	height: 100%;
+	object-fit: cover;
+    text-align: center;
 }
 .Protofile .picture img:hover
 {
 	cursor: pointer;
-	filter: brightness(70%);
-	-webkit-filter: brightness(70%);
 }
 .Protofile .buttons .mainBtn
 {
 	width: 200px;
 	margin: 20px 0;
+	height: 50px;
+	font-size: 20px;
+	transition: all .5s ease-in-out !important;
+	-webkit-transition: all .5s ease-in-out !important;
+	-moz-transition: all .5s ease-in-out !important;
+	-ms-transition: all .5s ease-in-out !important;
+	-o-transition: all .5s ease-in-out !important;
 }
-
+.Protofile .buttons .mainBtn:hover
+{
+	letter-spacing: 2px;
+}
 /* end the protofile section******************/
 
 
@@ -519,8 +605,8 @@ header .nav a:hover
 .mainPrice
 {
   margin-top: 30px;
-  /*background-color: #888;
-  */text-align: center;
+  text-align: center;
+  cursor: pointer;
   transition: all .4s ease-in-out;
   -webkit-transition: all .4s ease-in-out;
   -moz-transition: all .4s ease-in-out;
@@ -673,8 +759,7 @@ background-color: var(--mainColor);
 }
 .team .team-content .social-media-links .sp
 {
-	/*display: block;
-	*/position: absolute;
+	position: absolute;
 	top: 0;
 	left: 0;
 	bottom: 0;
@@ -686,10 +771,15 @@ background-color: var(--mainColor);
 	-ms-transition: all .4s ease-in-out;
 	-o-transition: all .4s ease-in-out;
 }
+.team .team-content:hover
+{
+	cursor: pointer;
+}
 .team .team-content:hover .sp
 {
-background-color: #7cb62f;
-width: 100%;
+	background-color: #7cb62f;
+	width: 100%;
+	cursor: pointer;
 }
 /* ************************************************************ **********************/
 /* start the business section* *********************************** * * *  * * * *   */
@@ -722,7 +812,9 @@ width: 100%;
 }
 .business .mainBusiness .busnessButton button
 {
-	width: 140px;
+	width: 150px;
+	height: 50px;
+	font-size: 20px;
 	padding: 10px 0;
 	border: none;
 	outline: none;
@@ -731,6 +823,22 @@ width: 100%;
 	text-transform: capitalize;
 	text-align: center;
 	font-size: 18px;
+	transition: all .4s ease-in-out;
+	-webkit-transition: all .4s ease-in-out;
+	-moz-transition: all .4s ease-in-out;
+	-ms-transition: all .4s ease-in-out;
+	-o-transition: all .4s ease-in-out;
+}
+.business .mainBusiness .busnessButton button:hover
+{
+	cursor: pointer;
+	letter-spacing: 1px;
+	border-radius: 5px;
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
+	-ms-border-radius: 5px;
+	-o-border-radius: 5px;
+	-webkit-border-radius: 5px;
 }
 @media (max-width:768px)
 {
@@ -741,7 +849,7 @@ width: 100%;
 }
 /* ************************************************************************************ */
 
-/* start the ehy choice us  section *********************************************** */
+/* start the ehy choice us  section testemonial section *********************************************** */
 .AboutUs
 {
 	width: 100%;
@@ -756,9 +864,7 @@ width: 100%;
 {
 	width: 100%;
 	height: 400px;
-	/* background-color: #818181; */
 	border: 1px solid #aeacac;
-	/* margin: 15px 0; */
 }
 .AboutUs .contentLeft .contentTop
 {
@@ -851,15 +957,10 @@ width: 100%;
 	height: 35px;
 	background-color: red;
 	text-align: center;
-	/* margin: auto; */
 	cursor: pointer;
-	/* position: relative; */
+
 	margin-bottom: 10px;
 }
-/* .AboutUs .vedio .vedio-icon i
-{
-    
-} */
 .AboutUs .vedio .vedio-title
 {
 	margin-bottom: 0;
@@ -874,23 +975,17 @@ width: 100%;
 {
 	.AboutUs .main-about
 	{
-		/* display: flex; */
-		/* flex-direction: column;
-		margin: auto; */
-		/* display: grid;
-		grid-template-columns: auto; */
         align-items: center;
 		gap: 20px;
-		/* width: 100%; */
 	}
 	.AboutUs .vedio
 	{
 		height: 400px;
 	}
 }
-/* end the why choice us */
+/* end the why choice us ***********************************************/
 
-/* start the Testmoinal section******************************* */
+/* start the Testmoinal section***********************************************/
 .Testmoinal
 {
 	width: 100%;
@@ -906,6 +1001,7 @@ width: 100%;
 	padding-top: 25px;
 	height: 100%;
 	margin-bottom: 20px;
+	cursor: pointer;
 }
 .Testmoinal .main-card img
 {
@@ -936,18 +1032,16 @@ width: 100%;
 {
 	.Testmoinal .main-card 
 	{
-		/* padding-top: 40px; */
 		height: 97%;
 	}
 }
-/* End the Testmoinal Setion */
+/* End the Testmoinal Setion ***************************************************/
 
-/* start the Blog section */
+/* start the Blog section ******************************************************/
 .blog
 {
 	width: 100%;
 	min-height: 800px;
-
 }
 .blog .main-Blog
 {
@@ -967,8 +1061,6 @@ width: 100%;
 .blog .main-Blog .date .data-table,
 .blog .main-Blog .date .data-comment
 {
-	/* font-size: 40px;
-	color: var(--mainColor); */
 	display: flex;
 	gap: 10px;
 }
@@ -999,17 +1091,26 @@ color: #818181;
 }
 .blog .main-Blog button
 {
-	width: 120px;
-	padding: 10px 15px;
-	background-color: var(--mainColor);
-	color: #fff;
-	border: none;
-	outline: none;
-
+    width: 120px;
+    padding: 10px 15px;
+    background-color: var(--mainColor);
+    color: #fff;
+    border: none;
+    outline: none;
+	font-size: 18px;
+    transition: all .3s ease-in-out;
+    -webkit-transition: all .3s ease-in-out;
+    -moz-transition: all .3s ease-in-out;
+    -ms-transition: all .3s ease-in-out;
+    -o-transition: all .3s ease-in-out;
 }
-/* end the Blog section ***************************************/
+.blog .main-Blog button:hover
+{
+ letter-spacing: 1px;
+}
+/* end the Blog section ************************************************/
 
-/* start the desc section */
+/* start the desc section ************************************************/
 .desc
 {
 	width: 100%;
@@ -1018,17 +1119,29 @@ color: #818181;
 	color: #fff;
 	text-align: center;
 	padding-top: 5%;
+
 }
 .desc .icon
 {
 	color: var(--mainColor);
 	margin-bottom: 25px;
+	cursor: pointer;
+	transition: all .2s ease-in-out;
+	-webkit-transition: all .2s ease-in-out;
+	-moz-transition: all .2s ease-in-out;
+	-ms-transition: all .2s ease-in-out;
+	-o-transition: all .2s ease-in-out;
+}
+.desc .icon:hover
+{
+	color: #fff;
 }
 .desc  p
 {
 	color: #818181;
 	max-width: 70%;
 	font-size: 20px;
+	margin: 10px auto;
 }
 .desc  p span
 {
@@ -1057,15 +1170,26 @@ color: #818181;
 {
 	width: 160px;
 	padding: 10px 20px;
-	font-size: 18px;
+	font-size: 19px;
 	background-color: #000;
 	color: #fff;
 	border: none;
+	text-transform: capitalize;
+	letter-spacing: 1px;
+	transition: all .3s ease-in-out;
 	transform: translateX(-160px);
 	-webkit-transform: translateX(-160px);
 	-moz-transform: translateX(-160px);
 	-ms-transform: translateX(-160px);
 	-o-transform: translateX(-160px);
+	-webkit-transition: all .3s ease-in-out;
+	-moz-transition: all .3s ease-in-out;
+	-ms-transition: all .3s ease-in-out;
+	-o-transition: all .3s ease-in-out;
+}
+.Get-ready .main-ready button:hover
+{
+	letter-spacing: 2px;
 }
 @media (max-width:992px)
 {
@@ -1085,6 +1209,7 @@ color: #818181;
 }	
 }
 /* end ready section********************************* */
+
 /* start the concat section***************************/
 .Concat
 {
@@ -1185,6 +1310,15 @@ form .form-button
 	font-size: 21px;
 	display: flex;
 	justify-content: center;
+	transition: all .3s ease-in-out;
+	-webkit-transition: all .3s ease-in-out;
+	-moz-transition: all .3s ease-in-out;
+	-ms-transition: all .3s ease-in-out;
+	-o-transition: all .3s ease-in-out;
+}
+form .form-button:hover
+{
+	letter-spacing: 1px;
 }
 @media (max-width:992px)
 {
@@ -1196,14 +1330,14 @@ form .form-button
 		padding-top: 15px; */
 	}
 }
-/* End the Concat Section  */
+/* End the Concat Section  ************************************/
+
 /* Start the main footer *************************************/
 .Main-Footer
 {
 	width: 100%;
 	min-height: 400px;
-	background-color: #313030;
-	
+	background-color: #313030;	
 }
 .Main-Footer .About-Unifox
 {
@@ -1269,8 +1403,22 @@ background-color: #007bb5;
 	height: 80px;
 	margin-bottom: 5px;
 	margin-right: 5px;
+	transition: all .3s ease-in-out;
+	-webkit-transition: all .3s ease-in-out;
+	-moz-transition: all .3s ease-in-out;
+	-ms-transition: all .3s ease-in-out;
+	-o-transition: all .3s ease-in-out;
 }
-/* end the main footer section */
+.Gallery img:hover
+{
+	cursor: pointer;
+	opacity: 0.6;
+	scale: 1.034;
+}
+.Popular-Search h3
+{
+}
+/* end the main footer section *****************************/
 /* start the footer navbar *********************************/
 .footer-navbar
 {
@@ -1299,13 +1447,13 @@ background-color: #007bb5;
 {
 	color: #dcd9d9;
 	font-size: 20px;
-	transition: all .3s ease-in-out;
-	-webkit-transition: all .3s ease-in-out;
-	-moz-transition: all .3s ease-in-out;
-	-ms-transition: all .3s ease-in-out;
-	-o-transition: all .3s ease-in-out;
+	transition: all .2s ease-in-out;
+	-webkit-transition: all .2s ease-in-out;
+	-moz-transition: all .2s ease-in-out;
+	-ms-transition: all .2s ease-in-out;
+	-o-transition: all .2s ease-in-out;
 }
-.list li a:hover
+.list li a:hover 
 {
 	color: var(--mainColor);
 }
@@ -1317,310 +1465,3 @@ background-color: #007bb5;
 ***
 **
 */
-section div.content
-{
-	padding-top: 12%;
-	text-align: center
-}
-section div.content h3
-{
-	font-size: 2em;
-	font-weight: bold;
-	margin-bottom: 20px
-}
-section div.content p
-{
-	font-size: 1.3em;
-	width: 50%;
-	text-transform: capitalize;
-	font-family: 'Times New Roman', Times, serif;
-	color: #000;
-	margin-bottom: 20px;
-	line-height:1.4em; 
-	margin-left: 25%;
-}
-section div.content button
-{
-	width: 200px;
-	padding: 15px;
-	margin-left: 20px;
-	margin-top: 20px;
-	font-size: 18px;
-	font-weight: bold;
-	background-color:#8be2e5;
-	color: #000;
-	border-radius: 10px;
-	outline: none;
-	border: 0;
-	transition: all .7s ease-in-out;
-	-webkit-transition: all .7s ease-in-out;
-	-moz-transition: all .7s ease-in-out;
-	-ms-transition: all .7s ease-in-out;
-	-o-transition: all .7s ease-in-out;
-	-webkit-border-radius: 10px;
-	-moz-border-radius: 10px;
-	-ms-border-radius: 10px;
-	-o-border-radius: 10px;
-}
-section div.content button.btn1:hover
-{
-	background-color: #fff;
-	cursor: pointer;
-	letter-spacing: 1.02px;
-}
-section div.content button.btn2:hover
-{
-	background-color: #fff;
-	cursor: pointer;
-	color: #000;
-	letter-spacing: 1.02px;
-}
-/* the second section ***************************************/
-section.info
-{
-	width: 100%;
-	height:auto ;
-	/* height: 620px; */
-	background-color: #b8b5b5;
-}
-section.info .container
-{
-	text-align: center;
-	padding: 20px 0;
-	font-size: 10px;
-	text-transform: capitalize;
-}
-section.info .div1 h4
-{
-	text-transform: capitalize;
-}
-section.info .div1 h4 span
-{
-	color: #4c0ef5;
-	cursor: pointer;
-}
-section.info .div1 p
-{
-	font-size:18px ;
-	direction: ltr;
-	text-transform: capitalize;
-	
-}
-section.info img
-{
-	width: 400px;
-	height: 350px;
-}
-
-/* 
-
-section.info div p
-{
-	font-size: 20px;
-	font-weight: bold;
-	margin-top: 10px;
-	text-align: center;
-	color: #000;
-	
-}
-section.info div.father
-{
-	width: 100%;
-}
-section.info div.father div.content
-{
-	width: 50%;
-	float: left;
-	padding-top: 8%;
-}
-
-section.info div.father div.content h3
-{
-	font-size: 1.7em;
-	font-weight: bold;
-	color: #000;
-}
- 
-section.info div.father div.content p
-{
-	font-size: 20px;
-	font-weight: normal;
-	margin-left: 15px;
-	color: #000;
-	line-height: 1em;
-	direction: ltr;	
-}
-section.info div.father div.picture
-{
-	width: 47%;
-	float: left;
-	padding-top: 8%;
-	margin-bottom: 10px;
-	margin-right: 30px;
-}
-section.info div.father div.content button
-{
-	width: 200px;
-	padding: 10px;
-	margin-top: 0;
-	color: #000;
-	float: left;
-	margin-left: 66%;
-}
-section.info div.father div.content button:hover
-{
-	background-color: aquamarine;
-	cursor: pointer;
-}
-section.info div.picture img
-{
-	width: 550px;
-	height: 260px;
-	float: left;
-	transform: translate(100px,0);
-	border-radius: 20px;
-	margin-right: 30px;
-	-webkit-border-radius: 20px;
-	-moz-border-radius: 20px;
-	-ms-border-radius: 20px;
-	-o-border-radius: 20px;
-	-webkit-transform: translate(100px,0);
-	-moz-transform: translate(100px,0);
-	-ms-transform: translate(100px,0);
-	-o-transform: translate(100px,0);
-}
-div.clearfix
-{
-	clear: both;
-} */
-
-/* the third section******************************************/
-
-section.profile
-{
-	width:100%;
-	/* min-width:930px; */
-}
-
-section.profile div.container
-{
-	/* width: 85%; */
-	margin: auto;
-	text-align: center;
-	
-}
- section.profile div.container h1,p
-{
-	font-size: 2em;
-	color: #000;
-	text-align: center;
-	margin: 15px auto;
-	text-transform: capitalize;
-}
-
-
-section.profile div.container p
-{
-	font-size: 1.2em;
-	font-weight: 400;
-	color: #000;
-	margin-bottom: 15px;
-}
-section.profile div.container button,section.profile button.butn
-{
-	width: 90px;
-	padding: 10px;
-	font-size: 16px;
-	font-weight: bold;
-	background-color: #000;
-	color: #fff;
-	margin-left: 10px;
-	display: inline-block;
-	margin-bottom: 20px;
-	border-radius: 10px;
-	border: .5px solid #000;
-	transition: all .5s ease-in-out;
-	
-}
-section.profile .butn
-{
-	width: 200px;
-	margin-left: 50%;
-	border-radius: 10px;
-}
-section.profile button:hover,section.profile div.container button:hover
-{
-	background-color:#8be2e5;
-	color: #000;
-	cursor: pointer;
-	border: none;
-}
-
-section.profile  div.imges
-{
-	display: flex;
-	/* justify-content:; */
-}
-section.profile   img
-{
-	position: relative;
-	width: 260px;
-    height: 214px;
-	/* display: inline-block; */
-	border: .5px solid #fff;
-	margin-left: 15px;
-	margin-bottom: 15px;
-}
-.cards
-{
-	width: 100%;
-	height: auto;
-	/* background: #999999; */
-	display: flex;
-    justify-content: space-around;
-	padding: 40px 0;
-
-}
-.card
-{
-	/* position: absolute; */
-	width: 200px;
-	height: auto;
-	margin-left: 20px;
-}
-.card-img
-{
-	width: 100%;
-	margin-left: 4px;
-}
-.card-text
-{
-	font-size: 20px;
-	direction: ltr;
-	/* width: 10%; */
-	text-align: center;
-}
-
-
-
-section.profile  div.imges img:hover
-{
-	border-radius: 20px;
-} 
-/* footer  ********************************************************************/
- footer
-{
-	width: auto;
-	height: 60px;
-	padding: 15px;
-	background-color:#000;
-	
-}
-footer p
-{
-	font-size: 22px;
-	text-transform: capitalize;
-    text-align: center;
-	margin-bottom: 10px;
-	color: #FFF; 
-} 
